SERVER-78148 Associate SocketException with offending HostAndPort